# duckdb-jsono

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  extension_config.cmake  pyproject.toml
.github/workflows/: MainDistributionPipeline.yml  Sanitizer.yml
bench/: .gitignore  PROFILING.md  README.md  analyze_profile.py  bench.py  characterize_numbers.py  cmp3.py  compare_results.py  config.py  environment.py  generate_data.py  micro_nested_lane.py  profile_driver.py  run_benchmarks.py  sanity_checks.py  sql_literals.py  test_bench.py
bench/data/: .gitignore
bench/optimization-log/: keyed_group_merge_map.md  manifest_encoding_storage_probe.py
bench/results/: .gitignore  baseline.json
bench/scenarios/: field_sample.py  synthetic.py
docs/: UPDATING.md  jsono_format.md  publishing_plan.md
scripts/: extension-upload.sh  verify_ducklake_033.py
src/: jsono.cpp  jsono_advisor.cpp  jsono_collect.cpp  jsono_diff.cpp  jsono_dom.cpp  jsono_elements.cpp  jsono_entries.cpp  jsono_extension.cpp  jsono_extract.cpp  jsono_merge.cpp  jsono_number.cpp  jsono_ops.cpp  jsono_optimizer.cpp  jsono_parse.cpp  jsono_path_ops.cpp  jsono_shred.cpp  jsono_storage_size.cpp  jsono_struct_constructor.cpp  jsono_to_json.cpp  jsono_transform.cpp  jsono_validate.cpp
src/include/: jsono.hpp  jsono_copy.hpp  jsono_dom.hpp  jsono_extension.hpp  jsono_extract.hpp  jsono_locate.hpp  jsono_memory.hpp  jsono_number.hpp  jsono_ops.hpp  jsono_optimizer.hpp  jsono_path.hpp  jsono_path_bind.hpp  jsono_path_function.hpp  jsono_projection.hpp  jsono_reader.hpp  jsono_render.hpp  jsono_row_read.hpp  jsono_scalar_write.hpp  jsono_shred.hpp  jsono_shred_read.hpp  jsono_transform.hpp  jsono_trie.hpp  jsono_trie_shape_plan.hpp  jsono_trie_walk.hpp  jsono_writer.hpp
test/: README.md
test/property/: jsono_property.py
test/pruning/: jsono_pruning.py
test/sql/: jsono_029_wide_reconstruct.test  jsono_advisor.test  jsono_advisor_parallel.test  jsono_array_elements.test  jsono_array_length.test  jsono_chained_extract.test  jsono_collect.test  jsono_collect_parallel.test  jsono_collect_window.test  jsono_constructor_input_types.test  jsono_constructor_input_types_parquet.test  jsono_constructor_timestamptz.test  jsono_cte_totality.test  jsono_dec60_corrupt.test  jsono_delim_totality.test  jsono_depth_limit.test  jsono_depth_stress.test  jsono_diff.test  jsono_diff_shredded.test  jsono_double_render.test  jsono_dupkey_shredded.test  jsono_embedded_verbatim.test  jsono_empty_key_path.test  jsono_entries.test  jsono_entries_array.test  jsono_extract_list_path.test  jsono_extrema_heap.test  jsono_group_merge.test  jsono_group_merge_direct.test  jsono_group_merge_keyed.test  jsono_group_merge_parallel.test  jsono_memory_limit.test  jsono_merge.test  jsono_merge_patch.test  jsono_merge_shredded.test  jsono_negative_index.test  jsono_numbers.test  jsono_operator_conjunction_cast.test  jsono_ops.test  jsono_optimizer.test  (+53 more)
