[project]
name = "duckdb-jsono"
version = "0.1.0"
description = "venv for formatting etc"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==26.5.1",
    "clang-format==11.0.1",
    "clang-tidy>=22.1.0.1",
    "cmake-format>=0.6.13",
    "duckdb>=1.5.5",
    "hypothesis>=6.100",
]

[tool.black]
# Match duckdb/scripts/format.py (the formatter `make format-check` drives over src/test): black at
# width 120 with no quote normalization. Pinning it here means a standalone `black` / `black --check`
# agrees with the make gate instead of silently formatting to black's 88-column default.
target-version = ["py313"]
line-length = 120
skip-string-normalization = true
# bench/optimization-log is an append-only research archive (some probes are not valid py313); it is
# not code we keep formatted, so black skips it even when handed the bench/ tree.
force-exclude = "bench/optimization-log/"
